added canvas pict

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CANVAS</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="buttons">
+      <button id="submit_clear" class="submit_clear" type="submit">ОЧИСТИТЬ</button>
+      <input class="coordinats" type="text" id="X" placeholder="X=0">
+      <input class="coordinats" type="text" id="Y" placeholder="Y=0">
+
+      <input class="coordinats" type="text" id="canvasX" placeholder="canvasX=0">
+      <input class="coordinats" type="text" id="canvasY" placeholder="canvasY=0">
+
+      <input class="coordinats" type="text" id="pictX" placeholder="pictX=0">
+      <input class="coordinats" type="text" id="pictY" placeholder="pictY=0">
+    </div>
+
     <canvas id="myCanvas" class="myCanvas"></canvas>
-</body>
+  </body>
 </html>
